--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=admin
+
+logging.level.root=info
