add liquibase settings & dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 logging.level.root=info
+
+
+spring.liquibase.liquibase-schema=users_scheme
+spring.liquibase.default-schema=users_scheme
+
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
