--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
 	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.13'
 	implementation 'org.liquibase:liquibase-core'
+	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
