--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.url=jdbc:postgresql://postgres:5432/users
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
