--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/users
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://bbbbb:5432/users?currentSchema=users_scheme
+spring.datasource.username=test-user
+spring.datasource.password=test-pass
 
 logging.level.root=info
 
