--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,48 @@
-version: '3'
+#version: '3'
+#
+#services:
+#  app:
+#    container_name: 'users-app'
+#    image: myapp
+#    build: ./
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - bbbbb
+#
+#  bbbbb:
+#    image: postgres
+#    container_name: 'postgres-db'
+#    environment:
+#      - POSTGRES_USER=test-user
+#      - POSTGRES_PASSWORD=test-pass
+#      - POSTGRES_DB=users
+#    ports:
+#      - "5432:5432"
+
+
+version: '2'
 
 services:
   app:
-    container_name: 'users-app'
-    image: myapp
-    build: ./
-    ports:
-      - "8080:8080"
+    image: 'myapp:latest'
+    build:
+      context: .
+    container_name: app
     depends_on:
-      - bbbbb
+      - db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/users
+      - SPRING_DATASOURCE_USERNAME=test-user
+      - SPRING_DATASOURCE_PASSWORD=test-pass
+#      - SPRING_JPA_HIBERNATE_DDL_AUTO=create-drop
 
-  bbbbb:
-    image: postgres
-    container_name: 'postgres-db'
+  db:
+    image: 'library/postgres:14'
+    container_name: db
     environment:
       - POSTGRES_USER=test-user
       - POSTGRES_PASSWORD=test-pass
       - POSTGRES_DB=users
-    ports:
-      - "5432:5432"
+
 
