--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://bbbbb:5432/users?currentSchema=users_scheme
+spring.datasource.url=jdbc:postgresql://db:5432/users
 spring.datasource.username=test-user
 spring.datasource.password=test-pass
 
@@ -8,4 +8,7 @@ logging.level.root=info
 spring.liquibase.liquibase-schema=users_scheme
 spring.liquibase.default-schema=users_scheme
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
+#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
+
+
+#?currentSchema=users_scheme
