оба контейнера запускаются, но REST не работает

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-spring.datasource.url=jdbc:postgresql://db:5432/users
+spring.datasource.url=jdbc:postgresql://db:5432/users?currentSchema=users_scheme
 spring.datasource.username=test-user
 spring.datasource.password=test-pass
 
 logging.level.root=info
 
 
-spring.liquibase.liquibase-schema=users_scheme
-spring.liquibase.default-schema=users_scheme
+#spring.liquibase.liquibase-schema=users_scheme
+#spring.liquibase.default-schema=users_scheme
 
-#spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
 
 
-#?currentSchema=users_scheme
