--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,22 @@
-spring.datasource.url=jdbc:postgresql://db:5432/users?currentSchema=users_scheme
+spring.datasource.url=jdbc:postgresql://db:5432/users
 spring.datasource.username=test-user
 spring.datasource.password=test-pass
 
 logging.level.root=info
 
 
-#spring.liquibase.liquibase-schema=users_scheme
-#spring.liquibase.default-schema=users_scheme
+spring.liquibase.liquibase-schema=users_scheme
+spring.liquibase.default-schema=users_scheme
 
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master-custom.yaml
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
+spring.liquibase.enabled=true
+
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.default_schema=users_scheme
 
 
+
+
+# Õ≈ ”ƒ¿Àﬂ“‹
+#?currentSchema=users_scheme
