--- a/build.gradle
+++ b/build.gradle
@@ -22,12 +22,18 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.testcontainers:postgresql:1.17.6"
+
+	testImplementation group: 'org.testcontainers', name: 'postgresql', version: '1.17.6'
+	testImplementation group: 'org.testcontainers', name: 'junit-jupiter', version: '1.17.6'
+
+
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
 }
 
-test {
-	exclude 'com/SkillBox/users/**'
-}
+//test {
+//	exclude 'com/SkillBox/users/**'
+//}
