--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://db:5432/users
-spring.datasource.username=test-user
-spring.datasource.password=test-pass
+#spring.datasource.url=jdbc:postgresql://db:5432/users
+#spring.datasource.username=test-user
+#spring.datasource.password=test-pass
 
 logging.level.root=info
 
@@ -12,7 +12,7 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.yaml
 spring.liquibase.enabled=true
 
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.default_schema=users_scheme
 
 
@@ -20,3 +20,11 @@ spring.jpa.properties.hibernate.default_schema=users_scheme
 
 # Õ≈ ”ƒ¿Àﬂ“‹
 #?currentSchema=users_scheme
+
+
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+#]spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
