all kubernetes yaml files moved to new directory

--- a/Helm/myapp/templates/order-svc-deployment.yaml
+++ b/Helm/myapp/templates/order-svc-deployment.yaml
@@ -13,7 +13,7 @@ spec:
         app: order-svc
     spec:
       containers:
-       - image: vicpas/my_app_rest_on_nub:v1
+       - image: {{ .Values.image }}
          name: order-svc
          ports:
            - containerPort: 8080
