--- a/Helm/myapp/templates/order-svc-service.yaml
+++ b/Helm/myapp/templates/order-svc-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: order-svc-service
+  namespace: {{ .Values.namespace }}
 spec:
   ports:
     - protocol: "TCP"
