--- a/Helm/myapp/templates/postgresql-claim0-persistentvolume.yaml
+++ b/Helm/myapp/templates/postgresql-claim0-persistentvolume.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: postgresql-claim0
+  namespace: {{ .Values.namespace }}
   labels:
     type: local
 spec:
