--- a/Helm/myapp/templates/postgresql-claim0-persistentvolumeclaim.yaml
+++ b/Helm/myapp/templates/postgresql-claim0-persistentvolumeclaim.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgresql-claim0
+  namespace: {{ .Values.namespace }}
   labels:
     app: postgresql
     tier: database
