--- a/Helm/myapp/templates/postgresql-deployment.yaml
+++ b/Helm/myapp/templates/postgresql-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgresql
+  namespace: {{ .Values.namespace }}
   labels:
     app: postgresql
     tier: database
