--- a/Helm/myapp/templates/postgresql-initial-data-configmap.yaml
+++ b/Helm/myapp/templates/postgresql-initial-data-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgresql-initdb-config
+  namespace: {{ .Values.namespace }}
 data:
   init.sql: |
     CREATE TABLE IF NOT EXISTS customers (
